# ampl

./: .gitignore  CHANGELOG.md  LYRICON_INTEGRATION.md  README.md  ci_failed.txt  md3Music-AppleLyrics-PRD.md
.github/workflows/: ci.yml
.trae/documents/: plan-am-style-player-toggle.md  plan-appbar-title-fullplayer-predictive-back-spectrum-pause-favorites-collapse-avatar-nav-predictive-switch.md  plan-download-service-optimization.md  plan-monet-predictive-back-ui-fixes-followup.md
.trae/specs/add-apple-music-lyrics/: checklist.md  spec.md  tasks.md
.trae/specs/add-lyricon-provider/: checklist.md  spec.md  tasks.md
docs/superpowers/plans/: 2026-07-20-upstream-pr-submission.md
md3Music/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml  setup_native.bat
md3Music/android/: build.gradle.kts
md3Music/android/app/: build.gradle.kts
md3Music/android/app/src/main/cpp/: CMakeLists.txt  nodejs_bridge.cpp
md3Music/kugou_api_server/: CHANGELOG.md  bundled_entry.js  modules_index.js  server.js  server_android.js  server_bundle.js  server_entry.js
md3Music/kugou_api_server/module/: captcha_sent.js  login_cellphone.js  login_qr_check.js  login_qr_key.js  login_token.js
md3Music/lib/: app.dart  main.dart
md3Music/lib/providers/: downloads_provider.dart  kugou_provider.dart  player_provider.dart  playlist_collection_notifier.dart  theme_provider.dart
md3Music/networkapi/: .env  package.json  server.js
md3Music/scripts/: build_nodejs_server.bat  extract_nodejs.ps1  gen_node_bundle_entry.js  reextract_libnode.ps1  test_api.ps1
(+84 files in other folders)
